fixed login issue

--- a/src/main/webapp/accounts/edit.xhtml
+++ b/src/main/webapp/accounts/edit.xhtml
@@ -17,7 +17,7 @@
 			<div class="header_03">Your Profile:</div>
 			<h:form id="reg">
 				<ui:insert name="formPrincipal">
-					<ui:include src="/accounts/formPrincipal.xhtml" />
+					<ui:include src="/accounts/formPrincipal2.xhtml" />
 				</ui:insert>
 				<p>
 					<h:panelGrid columns="2">
