--- a/src/main/webapp/leagues/index.xhtml
+++ b/src/main/webapp/leagues/index.xhtml
@@ -1,69 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
-	<ui:param name="currentTitle" value="Leagues" />
+	<ui:param name="currentTitle" value="My leagues" />
 	<ui:define name="content">
-		<div class="header_01">Welcome to Sport Center</div>
-
-		<div class="section_w480">
-			<div class="image_wrapper fl_img">
-				<img src="images/templatemo_image_02.jpg" alt="photo three" />
-			</div>
-			<p class="em_text">
-				This Free CSS Template is provided by <a
-					href="http://www.templatemo.com" target="_parent">TemplateMo.com</a>.
-				You may use this template in your websites. Credit goes to <a
-					href="http://www.photovaco.com" target="_blank">Free Photos</a> for
-				photos used in this template.
-			</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Integer vitae metus quis libero consectetur egestas. In hac
-				habitasse platea dictumst. Suspendisse tempus, metus in semper
-				accumsan, dolor purus imperdiet magna, a iaculis quam justo quis
-				purus. Etiam ut erat enim, et aliquet orci.</p>
-			<div class="button_01">
-				<a href="#">Read more</a>
-			</div>
-		</div>
-
 		<div class="section_w480">
 
-			<div class="header_01">Our Activities</div>
+			<div class="header_03">My leagues:</div>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Integer vitae metus quis libero consectetur egestas. In hac
-				habitasse platea dictumst. Suspendisse tempus, metus in semper
-				accumsan.</p>
-
-			<div class="margin_bottom_20"></div>
-
-			<div class="section_w160 fl">
-				<div class="image_wrapper">
-					<img src="images/templatemo_image_03.jpg" alt="image" />
-				</div>
-
-			</div>
-
-			<div class="section_w270 fr">
-
-				<ul class="content_list_01">
-					<li>Cras urna nisi, porta et gravida blandit, laoreet ornare
-						nunc.</li>
-					<li>Donec tincidunt sem eget velit cursus sit amet ullamcorper
-						mi vulputate.</li>
-				</ul>
-
-				<div class="margin_bottom_20"></div>
-
-				<div class="button_01">
-					<a href="#">Read more</a>
-				</div>
-			</div>
-
-
+			<c:choose>
+				<c:when test="#{empty userLeagues}">
+					<em>No league was found.</em>
+				</c:when>
+				<c:otherwise>
+					<table id="table">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Description</th>
+								<th>Sport</th>
+                                <th>League matches</th>
+							</tr>
+						</thead>
+						<c:forEach items="#{userLeagues}" var="league">
+							<tr>
+								<td>#{league.name}</td>
+								<td>#{league.description}</td>
+								<td>#{league.sport.name}</td>
+                                <td>
+                                    <h:link value="View matches" outcome="/leagues/matches/index">
+                                        <f:param name="leagueID" value="#{league.id}" />
+                                    </h:link>
+                                </td>
+							</tr>
+						</c:forEach>
+					</table>
+				</c:otherwise>
+			</c:choose>
 
 			<div class="cleaner"></div>
 		</div>
