improved match edit - added datetime picker

--- a/src/main/webapp/leagues/matches/edit.xhtml
+++ b/src/main/webapp/leagues/matches/edit.xhtml
@@ -6,7 +6,7 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:param name="currentTitle" value="Sports" />
 	<ui:define name="content">
-		<div class="header_01">Edit #{matchesController.league.name} Match</div>
+		<div class="header_01">Edit match in #{matchesController.league.name}</div>
 
 		<div class="section_w480">
 			<p class="em_text">On this page below you can edit the match you
