--- a/src/main/webapp/leagues/matches/formMatch.xhtml
+++ b/src/main/webapp/leagues/matches/formMatch.xhtml
@@ -72,4 +72,11 @@
         </tr>
         </tbody>
     </table>
+    <script>
+        var pickerSettings = {
+            dateFormat: 'yy-mm-dd'
+        };
+        $('input[id*=startTime]').datetimepicker(pickerSettings);
+        $('input[id*=endTime]').datetimepicker(pickerSettings);
+    </script>
 </ui:composition>
