--- a/src/main/webapp/leagues/index.xhtml
+++ b/src/main/webapp/leagues/index.xhtml
@@ -7,9 +7,20 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:param name="currentTitle" value="My leagues" />
 	<ui:define name="content">
-		<div class="section_w480">
+        <div class="header_01">My leagues</div>
 
-			<div class="header_03">My leagues:</div>
+        <div class="section_w480">
+            <div class="image_wrapper fl_img">
+                <img src="#{request.contextPath}/resources/css/images/league.jpg"
+                     alt="League" />
+            </div>
+            <p class="em_text">On this page below you can find the list of
+                leagues you are signed in. You can show matches in those leagues.</p>
+        </div>
+
+        <div class="section_w480">
+
+			<div class="header_03">List of my leagues:</div>
 
 			<c:choose>
 				<c:when test="#{empty userLeagues}">
