--- a/src/main/webapp/leagues/matches/edit.xhtml
+++ b/src/main/webapp/leagues/matches/edit.xhtml
@@ -1,46 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	template="/WEB-INF/templates/default.xhtml">
-	<ui:param name="currentTitle" value="Sports" />
-	<ui:define name="content">
-		<div class="header_01">Edit match in #{matchesController.league.name}</div>
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:h="http://java.sun.com/jsf/html"
+                template="/WEB-INF/templates/default.xhtml">
+    <ui:param name="currentTitle" value="My leagues"/>
+    <ui:define name="content">
+        <div class="header_01">Edit match in #{matchesController.league.name}</div>
 
-		<div class="section_w480">
-			<p class="em_text">On this page below you can edit the match you
-				have selected on the previous page.</p>
-		</div>
+        <div class="section_w480">
+            <p class="em_text">On this page below you can edit the match you
+                have selected on the previous page.</p>
+        </div>
 
-		<div class="section_w480">
+        <div class="section_w480">
 
-			<div class="header_03">#{player1Name} <span style="font: normal; color: #B0B0B0;">vs</span> #{player2Name}</div>
-			<h:form id="match-edit">
-				<ui:include src="/leagues/matches/formMatch.xhtml" />
-				<div>
-					<h:panelGrid columns="2">
-						<h:column>
-							<div class="button_01">
-								<h:commandLink id="save" action="#{matchesController.save}"
-									value="Save Changes">
-									<f:param name="leagueID" value="#{matchesController.league.id}" />
-									<f:param name="matchID" value="#{match.id}" />
-								</h:commandLink>
-							</div>
-						</h:column>
-						<h:column>
-							<div class="button_01">
-								<h:link value="Go Back" outcome="/leagues/matches/index">
-									<f:param name="leagueID" value="#{matchesController.league.id}" />
-								</h:link>
-							</div>
-						</h:column>
-					</h:panelGrid>
-				</div>
-			</h:form>
-		</div>
+            <div class="header_03">#{player1Name} <span style="font: normal; color: #B0B0B0;">vs</span> #{player2Name}
+            </div>
+            <h:form id="match-edit">
+                <ui:include src="/matches/formMatch.xhtml"/>
 
-	</ui:define>
+                <div>
+                    <h:panelGrid columns="2">
+                        <h:column>
+                            <div class="button_01">
+                                <h:commandLink id="save" action="#{matchesController.save}"
+                                               value="Save Changes">
+                                    <f:param name="leagueID" value="#{matchesController.league.id}"/>
+                                    <f:param name="matchID" value="#{match.id}"/>
+                                </h:commandLink>
+                            </div>
+                        </h:column>
+                        <h:column>
+                            <div class="button_01">
+                                <h:link value="Go Back" outcome="/leagues/matches/index">
+                                    <f:param name="leagueID" value="#{matchesController.league.id}"/>
+                                </h:link>
+                            </div>
+                        </h:column>
+                    </h:panelGrid>
+                </div>
+            </h:form>
+        </div>
+
+    </ui:define>
 
 </ui:composition>
