--- a/src/main/webapp/matches/index.xhtml
+++ b/src/main/webapp/matches/index.xhtml
@@ -1,71 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	template="/WEB-INF/templates/default.xhtml">
-	<ui:param name="currentTitle" value="Matches" />
-	<ui:define name="content">
-		<div class="header_01">Welcome to Sport Center</div>
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:c="http://java.sun.com/jsp/jstl/core"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:h="http://java.sun.com/jsf/html"
+                template="/WEB-INF/templates/fullWidth.xhtml">
+    <ui:param name="currentTitle" value="My matches"/>
+    <ui:define name="content">
 
-		<div class="section_w480">
-			<div class="image_wrapper fl_img">
-				<img src="images/templatemo_image_02.jpg" alt="photo three" />
-			</div>
-			<p class="em_text">
-				This Free CSS Template is provided by <a
-					href="http://www.templatemo.com" target="_parent">TemplateMo.com</a>.
-				You may use this template in your websites. Credit goes to <a
-					href="http://www.photovaco.com" target="_blank">Free Photos</a> for
-				photos used in this template.
-			</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Integer vitae metus quis libero consectetur egestas. In hac
-				habitasse platea dictumst. Suspendisse tempus, metus in semper
-				accumsan, dolor purus imperdiet magna, a iaculis quam justo quis
-				purus. Etiam ut erat enim, et aliquet orci.</p>
-			<div class="button_01">
-				<a href="#">Read more</a>
-			</div>
-		</div>
+        <c:choose>
+            <c:when test="#{empty matches}">
+                <em>No match was found.</em>
+            </c:when>
+            <c:otherwise>
+                <table id="table">
+                    <thead>
+                    <tr>
+                        <th style="width: 200px;">Time</th>
+                        <th style="width: 180px">Player 1</th>
+                        <th style="width: 100px">Score</th>
+                        <th style="width: 180px">Player 2</th>
+                        <th>Location</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <c:forEach items="#{matches}" var="matchesMap">
+                        <tr class="matches-date-row">
+                            <td>#{matchesMap.key}</td>
+                            <td colspan="4"></td>
+                        </tr>
+                        <c:forEach items="#{matchesMap.value}" var="wrapper">
+                            <tr>
+                                <td>#{wrapper.date}</td>
+                                <td class="right">#{wrapper.match.player1.firstName} #{wrapper.match.player1.lastName}</td>
+                                <td>#{wrapper.match.scorePlayer1} - #{wrapper.match.scorePlayer2}</td>
+                                <td class="left">#{wrapper.match.player2.firstName} #{wrapper.match.player2.lastName}</td>
+                                <td>#{wrapper.match.location}</td>
+                                <td>
+                                    <c:if test="#{wrapper.canEdit}">
+                                        <h:link outcome="/matches/edit">
+                                            <f:param name="matchID" value="#{wrapper.match.id}"/>
+                                            <img src="#{request.contextPath}/resources/css/images/edit_icon.png"
+                                                 alt="Edit"/>
+                                        </h:link>
+                                    </c:if>
+                                </td>
+                            </tr>
+                        </c:forEach>
+                    </c:forEach>
+                </table>
+            </c:otherwise>
+        </c:choose>
 
-		<div class="section_w480">
-
-			<div class="header_01">Our Activities</div>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Integer vitae metus quis libero consectetur egestas. In hac
-				habitasse platea dictumst. Suspendisse tempus, metus in semper
-				accumsan.</p>
-
-			<div class="margin_bottom_20"></div>
-
-			<div class="section_w160 fl">
-				<div class="image_wrapper">
-					<img src="images/templatemo_image_03.jpg" alt="image" />
-				</div>
-
-			</div>
-
-			<div class="section_w270 fr">
-
-				<ul class="content_list_01">
-					<li>Cras urna nisi, porta et gravida blandit, laoreet ornare
-						nunc.</li>
-					<li>Donec tincidunt sem eget velit cursus sit amet ullamcorper
-						mi vulputate.</li>
-				</ul>
-
-				<div class="margin_bottom_20"></div>
-
-				<div class="button_01">
-					<a href="#">Read more</a>
-				</div>
-			</div>
-
-
-
-			<div class="cleaner"></div>
-		</div>
-	</ui:define>
+        <div class="cleaner"></div>
+    </ui:define>
 </ui:composition>
