--- a/src/main/webapp/matches/index.xhtml
+++ b/src/main/webapp/matches/index.xhtml
@@ -29,18 +29,18 @@
                 <table id="table">
                     <thead>
                     <tr>
-                        <th style="width: 200px;">Time</th>
-                        <th style="width: 180px">Player 1</th>
-                        <th style="width: 100px">Score</th>
-                        <th style="width: 180px">Player 2</th>
-                        <th>Location</th>
-                        <th></th>
+                        <th><div style="width: 180px;">Time</div></th>
+                        <th><div style="width: 175px">Player 1</div></th>
+                        <th><div style="width: 80px">Score</div></th>
+                        <th><div style="width: 175px">Player 2</div></th>
+                        <th><div style="width: 154px">Location</div></th>
+                        <th><div style="width: 40px; height: 1px;"> </div></th>
                     </tr>
                     </thead>
                     <c:forEach items="#{matches}" var="matchesMap">
                         <tr class="matches-date-row">
                             <td>#{matchesMap.key}</td>
-                            <td colspan="4"></td>
+                            <td colspan="5"></td>
                         </tr>
                         <c:forEach items="#{matchesMap.value}" var="wrapper">
                             <tr>
