--- a/src/main/webapp/sports/leagues/index.xhtml
+++ b/src/main/webapp/sports/leagues/index.xhtml
@@ -66,7 +66,7 @@
 			<br />
 
 			<c:choose>
-				<c:when test="#{empty leagues}">
+				<c:when test="#{empty sportLeagues}">
 					<em>No league was found.</em>
 				</c:when>
 				<c:otherwise>
@@ -83,7 +83,7 @@
 								</c:if>
 							</tr>
 						</thead>
-						<c:forEach items="#{leagues}" var="wrapper">
+						<c:forEach items="#{sportLeagues}" var="wrapper">
 							<tr>
 								<td>#{wrapper.league.name}</td>
 								<td>#{wrapper.league.description}</td>
