Fixed evaluating matches with null score and button link back to leagues

--- a/src/main/webapp/leagues/results/list.xhtml
+++ b/src/main/webapp/leagues/results/list.xhtml
@@ -19,7 +19,7 @@
 			<div class="header_03">Results:</div>
 
             <div class="button_01">
-                <h:link value="Back to leagues" outcome="#{actionBase}/index"/>
+                <h:link value="Back to leagues" outcome="/userleagues/index"/>
             </div>
             <br />
 
