fixed broken links, headlines and descriptions

--- a/src/main/webapp/leagues/list.xhtml
+++ b/src/main/webapp/leagues/list.xhtml
@@ -6,7 +6,7 @@
                 xmlns:h="http://java.sun.com/jsf/html">
     <c:choose>
         <c:when test="#{empty leagues}">
-            <em>No matches found.</em>
+            <em>No league was found.</em>
         </c:when>
         <c:otherwise>
             <table id="table">
