--- a/src/main/webapp/leagues/results/list.xhtml
+++ b/src/main/webapp/leagues/results/list.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
-		<div class="header_01">Players in #{leagueResultsController.resultsLeague.name}</div>
+		<div class="header_01">Results in #{leagueResultsController.resultsLeague.name}</div>
 
 		<div class="section_w480">
 			<div class="image_wrapper fl_img">
@@ -19,15 +19,15 @@
 			<div class="header_03">Results:</div>
 
             <div class="button_01">
-                <h:link value="Back to leagues" outcome="/userleagues/index"/>
+                <h:link value="Back to leagues" outcome="#{actionBase}/index"/>
             </div>
             <br />
 
 			<h:panelGroup rendered="#{empty playerResults}">
-				<em>No user was found.</em>
+				<em>No result was found.</em>
 			</h:panelGroup>
 			<h:dataTable var="result" value="#{playerResults}"
-				rendered="#{not empty users}" styleClass="simpletablestyle" id="table">
+				rendered="#{not empty playerResults}" styleClass="simpletablestyle" id="table">
 				<h:column>
 					<f:facet name="header">Player</f:facet>
 	                #{result.user.firstName} #{result.user.lastName}
