fixed results for ordinary players

--- a/src/main/webapp/leagues/list.xhtml
+++ b/src/main/webapp/leagues/list.xhtml
@@ -36,7 +36,7 @@
                             </h:link>
                         </td>
                         <td>
-                            <h:link value="View results" outcome="/leagues/results/index">
+                            <h:link value="View results" outcome="#{actionBase}/results/index">
                                 <f:param name="leagueID" value="#{league.id}"/>
                             </h:link>
                         </td>
